# trappedbot

./: .gitignore  appconfig.html  applogger.html  botclient.html  callbacks.html  chat_functions.html  cmd.html  configparser.html  configuration.html  constants.html  events.html  index.html  mxutil.html  mypy.ini  pyproject.toml  readme.md  setup.cfg  storage.html  tasks.example.yml  trappedbot.config.yml  util.html  version.html  version.py
.github/workflows/: main.yml
commands/: builtin.html  command.html  command_list.html  index.html
docs/: todo.md
extensions/: index.html
responses/: index.html  response.html
support/: example_external_task.py  mxusers.py  trappedbot.service
tasks/: builtin.html  dynload.html  index.html  task.html
trappedbot/: __init__.py  appconfig.py  applogger.html  applogger.py  bot_commands.py  botclient.html  botclient.py  builtin_tasks.py  callbacks.html  callbacks.py  chat_functions.py  cmd.html  cmd.py  command_dict.py  commands.py  config.py  configparser.py  configuration.html  configuration.py  constants.py  events.py  index.html  message_responses.py  mxutil.py  storage.html  taskdict.py  util.html  util.py  version.html  version.py
trappedbot/commands/: builtin.py  command.html  command.py  command_list.html  command_list.py
trappedbot/extensions/: __init__.py  internal.py
trappedbot/responses/: index.html  response_list.html  response_list.py
trappedbot/tasks/: __init__.py  builtin.html  builtin.py  dynload.html  dynload.py  mxusers.py  responses.py  task.html  task.py  taskdefinition.py  taskutil.py
