[metadata]
name = trappedbot
version = 0.9.0
author = Micah R Ledbetter
author_email = me@micahrl.com
description = Trapped in a Matrix server, send help!
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
url = "https://github.com/mrled/trappedbot"

[options]
packages =
    trappedbot
python_requires = >=3.8
install_requires =
    Markdown
    Pillow
    PyYAML
    matrix-nio[e2e]
    python-magic
    requests

[options.entry_points]
console_scripts =
    trappedbot = trappedbot.cmd:main
